--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@floating-ui/react": "^0.26.3",
+    "@hookform/resolvers": "^3.3.2",
     "@tanstack/match-sorter-utils": "^8.8.4",
     "@tanstack/react-table": "^8.10.7",
+    "nanoid": "^5.0.3",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^20",
