--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.3.2",
     "@tanstack/match-sorter-utils": "^8.8.4",
     "@tanstack/react-table": "^8.10.7",
+    "bcryptjs": "^2.4.3",
     "nanoid": "^5.0.3",
     "next": "14.0.3",
     "react": "^18",
@@ -22,6 +23,7 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
