--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "jsx": "preserve",
     "incremental": true,
     "allowImportingTsExtensions": true,
+    "noImplicitAny": false,
     "plugins": [
       {
         "name": "next"
