--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@tanstack/match-sorter-utils": "^8.8.4",
     "@tanstack/react-table": "^8.10.7",
     "bcryptjs": "^2.4.3",
-    "nanoid": "^5.0.3",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^8.5.1",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
