--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "bcryptjs": "^2.4.3",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^8.5.1",
+    "nanoid": "^5.0.3",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
+    "react-select": "^5.8.0",
     "react-toastify": "^9.1.3",
     "sass": "^1.69.5",
     "yup": "^1.3.2"
