--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-select": "^5.8.0",
     "react-toastify": "^9.1.3",
     "sass": "^1.69.5",
-    "yup": "^1.3.2"
+    "yup": "^1.3.2",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
